css/styles.css
/* 
** ==================================================
** NORMALIZE
** ==================================================
*/

/*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
button,hr,input{overflow:visible}progress,sub,sup{vertical-align:baseline}[type=checkbox],[type=radio],legend{box-sizing:border-box;padding:0}html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button}[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring,button:-moz-focusring{outline:ButtonText dotted 1px}fieldset{padding:.35em .75em .625em}legend{color:inherit;display:table;max-width:100%;white-space:normal}textarea{overflow:auto}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}[hidden],template{display:none}

/* 
** ==================================================
** GENERAL
** ==================================================
*/

html {
    box-sizing: border-box;
}
*, *:before, *:after {
    box-sizing: inherit;
}

a {
    color: #22bd7a;
    text-decoration: none;
    transition: background-color 0.25s ease, color 0.25s ease;
}

a:hover,
a:focus {
    color: #03A678;
}

hr {
    margin: 20px 0;
    height: 1px;
    border: 0;
    background-color: rgba(0,0,0,.05);
}

img {
    max-width: 100%;
    vertical-align: bottom;
}

img.fill {
    width: 100%;
}

@media screen and (max-width: 779.9px) {
    .hidden-on-mobile {
        display: none !important;
    }
}

@media screen and (min-width: 780px) {
    .visible-on-mobile {
        display: none !important;
    }
}

.trim > *:last-child,
.trim > *:last-child > *:last-child,
.trim > *:last-child > *:last-child > *:last-child {
    margin-bottom: 0;
}

.margin {
    margin-bottom: 2rem;
}

.margin-small {
    margin-bottom: 1rem;
}

.no-margin {
    margin-bottom: 0;
}


/* 
** ==================================================
** COLOR
** ==================================================
*/
.txt-primary {
    color: #22bd7a;
}

/* 
** ==================================================
** TYPOGRAPHY
** ==================================================
*/
html { font-size: 62.5%; }

body {
    font-family: 'Open Sans', sans-serif;
    font-size: 1.4rem;
    color: #333;
}

h1, h2, h3, h4, h5, h6, .tabs__tab, .stat, .btn, .no-results {
    font-family: 'Montserrat', sans-serif;
}

h1, h2, h3, h4, h5, h6, p {
    margin-top: 0;
    margin-bottom: 2rem;
}

h1 {
    font-size: 4rem;
}

h2 {
    color: #22bd7a;
    font-size: 3rem;
}

h3 {
    font-size: 2rem;
}

h4 {
    font-size: 1.6rem;
}

p, td, th, li {
    line-height: 1.5;
}

.large {
    font-size: 2rem;
}

.small {
    font-size: 1.2rem;
}

.center {
    text-align: center;
}

/* 
** ==================================================
** COMPONENTS
** ==================================================
*/

/* Button */
.btn {
    font-size: 1.6rem;
    font-weight: 700;
    border: 0;
    background-color: #ccc;
    border-radius: .5rem;
    padding: 2rem;
    cursor: pointer;
    transition: background-color 0.25s ease, color 0.25s ease;
}

.btn--primary {
    color: white;
    background-color: #22bd7a;
}

.btn--primary:hover,
.btn--primary:focus {
    background-color: #03A678;
}

.btn--wide {
    width: 100%;
    text-align: center;
}

/* Media */
.media {
    display: flex;
    align-items: flex-start;
}

.media--center
{
    align-items: center;
}

.media__img {
    margin-right: 1rem;
}
  
.media__body {
    flex: 1;
}

/* Author */
.author__img {
    width: 50px;
    height: 50px;
}

.author__title,
.author__subtitle {
    margin-bottom: 0;
}

/* Reward */
.reward,
.reward[disabled],
.reward[disabled]:hover,
.reward[disabled]:focus {
    display: block;
    padding: 2rem;
    background-color: rgba(0,0,0,.025);
    border-radius: .5rem;
}

.reward:hover,
.reward:focus {
    background-color: #22bd7a;
}

.reward:hover *,
.reward:focus * {
    color: white;
}

.reward__title,
.reward__description {
    color: #333;
    margin: 0 0 1rem;
    transition: color 0.25s ease;
}

.reward + .reward {
    margin-top: 2rem;
}

.reward[disabled] {
    cursor: default;
}

.reward[disabled] *,
.reward[disabled]:hover *,
.reward[disabled]:focus *  {
    color: rgba(0,0,0,.15);
}

/* Masthead */
.masthead {
    text-align: center;
    padding: 3rem 0;
}

@media screen and (min-width: 780px) {
    .masthead {
        text-align: left;
        padding: 6rem 0;
    }
}

/* Spaced */
.spaced {
    display: flex;
    justify-content: space-around;
}

.spaced > * {
    flex: 0;
    white-space: nowrap;
}

/* Tabs */
.tabs {
    display: none; /* Don't show on mobile */
    list-style: none;
    padding: 0;
    margin: 0;
}

.tabs__tab {
    flex: 0;
    margin-right: 5px;
}

.tabs__tab a {
    display: block;
    color: #333;
    font-size: 14px;
    text-decoration: none;
    white-space: nowrap;
    padding: calc(2rem - 5px) 2rem;
    background-color: rgba(0,0,0,.025);
    border-top: solid 5px transparent;
    border-bottom: solid 5px transparent;
}

.tabs__tab a:hover,
.tabs__tab a:focus {
    color: white;
    background-color: rgba(0,0,0,.5);
}

.tabs__tab--active a,
.tabs__tab--active a:hover,
.tabs__tab--active a:focus {
    color: #333;
    background-color: white;
    border-top-color: #22bd7a;
}

@media screen and (min-width: 780px) {
    .tabs {
        display: flex;
    }

    .tabs__content {
        display: none;
    }
    
    .tabs__content--active {
        display: block;
    }
}

/* Stats */
.stat {
    line-height: 1.1;
    margin-bottom: 2rem;
}

.stat__value {
    display: block;
    font-size: 3rem;
    font-weight: 700;
}

.stat__label {
    display: block;
}

/* Updates */
.update + .update {
    margin-top: 2rem;
    border-top: solid 1px  rgba(0,0,0,.05);
    padding-top: 2rem;
}

.update__title {
    font-size: 3rem;
}

.update__meta {
    font-weight: bold;
    margin-top: -1.5rem;
}

/* Backer */
.backer + .backer {
    margin-top: 2rem;
    border-top: solid 1px  rgba(0,0,0,.05);
    padding-top: 2rem;
}

.backer__img {
    width: 65px;
    height: 65px;
}

.backer__name {
    margin: 0;
}

.backer__meta {
    font-size: 1.2rem;
}

/* Badge */
.badge {
    font-family: Arial, sans-serif;
    font-weight: bold;
    display: inline-block;
    color: white;
    background-color: #22bd7a;
    text-align: center;
    line-height: 1;
    padding: 0.5rem 1rem;
    margin: -0.5rem 0 -0.5rem .5rem;
    border-radius: 2rem;
    vertical-align: baseline;
}

/* No results */
.no-results {
    color: rgba(0,0,0,.15);
    font-size: 3rem;
    font-weight: 700;
    text-align: center;
    padding: 6rem 0;
}

/* 
** ==================================================
** STRUCTURE
** ==================================================
*/

body {
    background-color: #f8f8f8;
}

.container {
    max-width: 1140px;
    margin: 0 auto;
    padding: 0 1rem;
}

@media screen and (min-width: 780px) {
    .container {
        padding: 0 2rem;
    }
}

.title + .subtitle {
    margin-top: -1rem;
}

@media screen and (min-width: 780px) {
    .content {
        background-color: white;
        padding: 2rem;
    }
}

.content__main img {
    max-width: 100%;
}

@media screen and (min-width: 780px) {
    .content {
        display: flex;
    }

    .content__main {
        flex: 0 0 66.6%;
        padding-right: 1rem;
    }

    .content__aside {
        flex: 0 0 33.3%;
        padding-left: 1rem;
    }
}

@media screen and (min-width: 968px) {
    .content__main {
        flex: 0 0 75%;
    }

    .content__aside {
        flex: 0 0 25%;
    }
}

.content-block {
    padding: 2rem;
    background-color: white;
}

.content-block + .content-block {
    margin-top: 2rem;
} 

@media screen and (min-width: 780px) {
    .content-block {
        padding: 0;
        margin-top: 0 !important;
    }
}

.main-img {
    margin: -2rem -2rem 2rem;
}

@media screen and (min-width: 780px) {
    .main-img {
        margin: 0 0 2rem;
    }
}

footer {
    color: rgba(255,255,255,.5);
    background-color: #333;
    margin-top: 2rem;
    padding: 2rem;
    text-align: center;
}

/* 968 / 740 */

